--- a/src/components/sidebar.module.css
+++ b/src/components/sidebar.module.css
@@ -4,10 +4,11 @@
 /*    text-align: center;*/
 /*    position:absolute; bottom:0; left:0;*/
     margin-left:15%;
-    color:black;
+    color:#313639 ;
     margin-top: 15%;
     line-height: 2;
     font-size: 12px;
+    font-family: brandon-grotesque, sans-serif;
   
 }
 a{
@@ -21,7 +22,9 @@ a{
     right:7%;
 }
 .work {
-    font-family: 'Lato', sans-serif;
+/*    font-family: 'Lato', sans-serif;*/
+      font-family: brandon-grotesque, sans-serif;
+
     font-size:12pt;
     font-weight: 700;
     position: sticky;
@@ -29,6 +32,8 @@ a{
     z-index:99;
     letter-spacing: 2px;
     text-align: center;
+
+
 }
 .grid{
     display: grid;
