--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -91,7 +91,7 @@
   width:100%;
   line-height: 2;
   text-align: center;
-  font-family: 'Lato', sans-serif;
+  font-family: brandon-grotesque, sans-serif;
   font-size:14pt;
 /*    position: absolute;*/
 
