--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -20,8 +20,10 @@
     position:relative;
 /*    margin-left:17%;*/
     margin-bottom:24px;
-  /*  color:#384853;*/
-    color:#232838;
+
+  /*  color:#232838;*/
+    color:white;
+
     padding-left:14%;
     padding-top:140px;
 }
@@ -51,20 +53,19 @@
 
 }
 .table{
-    color:#344854;
-     background-color: #6b7b8a05;
+   /* color:#344854;*/
+    color:#6b7b8a;;
+
+    box-shadow: inset 0 0px 1500px rgba(100, 100, 100, .5);
 /*    font-family: 'Lato', sans-serif;*/
     font-family: sans-serif;
     font-size:18px;
     text-align: left;
     border-spacing: 20px;
     column-count: 3;
-    border-width:4px;
-/*    box-shadow: 0 0px 20px 0 rgba(0,0,0,.05);*/
-   /* background-color:#FFF;*/
-/*    background-color: rgba(250,250,250);*/
-    border-color: #f6f7fa;
-    border-style: solid;
+/*    border-width:4px;*/
+/*    border-color: #f6f7fa;*/
+/*    border-style: solid;*/
     padding-right:16px;
     padding-left:16px;
     padding-top:24px;
@@ -77,10 +78,12 @@
 }
 .table th{
     font-weight:normal;
+    color:white;
 }
 .table td{
 /*    padding-left: 20%;*/
     text-align:right;
+     color: #97a7a9;;
 
 }
 .role{
@@ -90,7 +93,8 @@
     color:#344854;
 }
 .paragraph{
-    color:#344854;
+  /*  color:#344854;*/
+    color:white;
 /*    font-family: 'Lato', sans-serif;*/
     font-family: sans-serif;
 /*    text-align: center;*/
