--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -11,10 +11,6 @@
 
     font-size:12pt;
     border:0%;
-/*    font-family: masqualero, sans-serif;
-    font-size:16pt;*/
-/*    padding-top:1%;*/ /* padding-top must be the same as header height */
-/*    padding-left:2%;*/
     margin:0%;
     padding:0%;
     width:100%; /**/
@@ -26,8 +22,8 @@
     grid-column: span 2;
     grid-row: span 2;
     display:block; 
-    background-color:rgb(255,255,255);opacity:0.9;
-    box-shadow: 1px 1px 5px #C8C8C8;
+    background-color:rgb(15,15,15);opacity:0.8;
+/*    box-shadow: 0.5px 0.5px 10px #C1D1DE;*/
     backdrop-filter: blur(8px);
 
 }
