--- a/src/components/sidebar.module.css
+++ b/src/components/sidebar.module.css
@@ -1,18 +1,7 @@
-.contact{
-    text-decoration: none;
-/*    z-index: 99;*/
-/*    text-align: center;*/
-/*    position:absolute; bottom:0; left:0;*/
-    margin-left:15%;
-    color:#313639 ;
-    margin-top: 15%;
-    line-height: 2;
-    font-size: 12px;
-    font-family: brandon-grotesque, sans-serif;
-  
-}
+
 a{
-    color:black;
+    color:white;
+      opacity: 1;
 }
 
 .shift{
@@ -20,6 +9,9 @@ a{
     width:100%;
     text-align: right;
     right:7%;
+      opacity: 1;
+      color:white;
+
 }
 .work {
 /*    font-family: 'Lato', sans-serif;*/
@@ -29,9 +21,12 @@ a{
     font-weight: 700;
     position: sticky;
 /*    box-sizing:border-box;*/
-    z-index:99;
+    z-index:100;
     letter-spacing: 2px;
     text-align: center;
+    color:white;
+      opacity: 1;
+
 
 
 }
@@ -41,6 +36,7 @@ a{
     grid-column-gap: 48px;
     width:100%;
     margin:auto;
+    color:white;
 
     align-self: center;
     justify-content: center;
@@ -55,6 +51,7 @@ a{
     width: 30%;
     float:right;
     margin-right:12%;
+    color:white;
 }
 
 .optionalWork{
@@ -64,23 +61,25 @@ a{
     letter-spacing: 2px;
     opacity: 0;
     transition: visibility 0s, opacity 0.5s linear;
+    color:white;
 }
 /*.optionalWork:hover{
     color: "black";
     border-bottom: 3px solid black;
 }*/
 .work  span:hover{
-    color: "black";
-    border-bottom: 3px solid black;
+    color:white;
+    border-bottom: 3px solid white;
 }
 .optionalWork span:hover{
-    color: "black";
-    border-bottom: 3px solid black;
+    color:white;
+    border-bottom: 3px solid white;
 }
 .grid:hover .optionalWork {
 /*    display:block;*/
 /*    visibility: visible;*/
     opacity: 1;
+    color:white;
 }
 
 
