--- a/src/pages/featured-styles.module.css
+++ b/src/pages/featured-styles.module.css
@@ -38,7 +38,7 @@
     color:#4285f4;
 }
 .colorBackground{
-    background-color: white;
+  /*  background-color: #0f0f0f;*/
     padding-bottom:24px;
     padding-top:12px;
 }
@@ -47,8 +47,8 @@
     margin-top: 60px;
     margin-bottom: 60px;
     width:100%;
-    box-shadow: 20px 20px 60px #c5c5c5,
-             -20px -20px 60px #fbfbfb;
+/*    box-shadow: 20px 20px 60px #c5c5c5,
+             -20px -20px 60px #fbfbfb;*/
     border-radius: 24px;
 /*    border: 1px solid #555;*/
 }
@@ -161,7 +161,8 @@
 }
 .subtitle{
     font-size: 36px;
-    color: #384853;
+/*    color: #384853;*/
+    color:white;
     word-spacing: 5px;
     margin-bottom: 20px;
     line-height: 60px;
@@ -188,7 +189,8 @@
 
 .header{
     font-size: 36px;
-    color: #384853;
+/*    color: #384853;*/
+    color:white;
     word-spacing: 5px;
     margin-bottom: 20px;
     line-height: 56px;
@@ -227,7 +229,8 @@
     font-family: sans-serif;
     line-height: 1.4;
 /*    letter-spacing: 1px;*/
-    color: #344854;
+/*    color: #344854;*/
+    color:white;
 /*    border: 2px solid #6b7b8a ;*/
     padding:16px;
     border-radius: 2px;
@@ -243,7 +246,8 @@
     text-align: left;
     font-family: sans-serif;
     font-weight:400;
-    color: #6b7b8a;
+/*    color: #6b7b8a;*/
+    color:white;
     text-transform: uppercase;
     letter-spacing: 1.5px;
     opacity: 1;
@@ -261,7 +265,8 @@
     opacity: 1;
 }
 .desc{
-    color: #344854;
+    /*color: #344854;*/
+    color:white;
     font-size: 17px;
     line-height: 27px;
     font-weight: 400;
@@ -279,7 +284,8 @@
     width: auto;
     margin-bottom: 0px;
     opacity: 0.5;
-    color: #6b7b8a;
+/*    color: #6b7b8a;*/
+    color:white;
     font-size: 18px;
     line-height: 20px;
     font-weight: 400;
@@ -331,7 +337,8 @@
     line-height: 27px;
     text-align: left;
     font-family: sans-serif;
-    color:#344854;
+ /*   color:#344854;*/
+    color:white;
     font-weight: 400;
     letter-spacing: 1.5px;
 
@@ -347,23 +354,26 @@
     text-align: left;
     font-family: sans-serif;
     font-weight:700;
-    color: #384853;
+   /* color: #384853;*/
+    color:white;
     text-transform: uppercase;
     letter-spacing: 1.5px;
 }
 
 .oneliner {
     font-size: 28px;
-    color: #384853;
+   /* color: #384853;*/
     word-spacing: 5px;
     margin-top: 60px;
     line-height: 36px;
     padding:0px 0px 24px 0px;
+    color:white;
 }
 
 .descHeadline{
     margin-bottom: 20px;
-    color: #6b7b8a;
+   /* color: #6b7b8a;*/
+    color:white;
     font-size: 28px;
     line-height: 53px;
     font-weight: 200;
@@ -395,7 +405,8 @@
     margin-bottom:60px;
 }
 .paragraph{
-    color:#344854;
+  /*  color:#344854;*/
+    color:white;
     font-family: 'Lato', sans-serif;
     font-size:16px;
     width:100%;
@@ -510,8 +521,8 @@ li{
     margin-bottom:10px;
     margin-top: 20px;
     max-width: 100%;
-    color: #344854;
-/*    color:#bd081c;*/
+/*    color: #344854;*/
+    color:white;
     font-size: 17px;
     line-height: 27px;
     font-weight: 400;
@@ -548,8 +559,9 @@ ol li:before {
     max-width: 1225px;
     position:relative;
     line-height:1.5;
- /*   color:#4285f4;*/
-    color: #344854;
+
+    /*color: #344854;*/
+    color:white;
     font-weight: bold;
     justify-content: center;
     align-items: center;
