--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -5,7 +5,10 @@
 @import url("https://use.typekit.net/szt4hzl.css");
 
 
- 
+.backgroundColor{
+  background-color: black;
+}
+
 /*for subcategories*/
 .margin{
   padding-left: 10%;
@@ -19,7 +22,12 @@
   padding-bottom: 1000px;
   overflow: "hidden";
   margin:auto;
+  background-color: #0f0f0f;
+  color:white;
 
+}
+a{
+  color:white;
 }
 
 .title{
@@ -29,6 +37,8 @@
   font-weight:bold;
 /*  padding-left:10%;*/
   font-size:14pt;
+
+  color:white;
   
 }
 .name{
@@ -42,7 +52,8 @@
   padding-bottom: 48px;
   padding-top: 48px;
   z-index: 10;
-
+  
+  color:white;
 
 }
 .link{
@@ -93,6 +104,8 @@
   text-align: center;
   font-family: brandon-grotesque, sans-serif;
   font-size:14pt;
+
+  color:#97a7a9;
 /*    position: absolute;*/
 
 }
@@ -159,13 +172,13 @@
   position: relative;
   border-radius: 10px;
   transition: all .2s cubic-bezier(.25,.46,.45,.94);
-  box-shadow: 0 20px 20px 0 rgba(0,0,0,.03);
+  box-shadow: 0 20px 20px 0 rgba(255,255,255,.03);
 
   
 }
 .squareWrapper:hover{
   border-radius: 10px;
-  box-shadow: 0 20px 20px 0 rgba(0,0,0,.07);
+  box-shadow: 0 20px 20px 0 rgba(255,255,255,.07);
   transform: translate(0px, -20px);
 }
 
