--- a/src/styles/global/reset.css
+++ b/src/styles/global/reset.css
@@ -5,8 +5,8 @@
 **/
 
 body {
-  margin: 0;
-  background-color: white;
+    margin: 0;
+    background-color: #0f0f0f;
     scroll-behavior: smooth;
 
 }
