--- a/src/pages/featured-styles.module.css
+++ b/src/pages/featured-styles.module.css
@@ -211,7 +211,7 @@
     text-align: left;
     font-family: sans-serif;
     font-weight:700;
-    color: #384853;
+    color: white;
     text-transform: uppercase;
     letter-spacing: 1.5px;
     opacity: 1;
@@ -220,7 +220,7 @@
     font-size:15px;
     font-family: sans-serif;
     margin-bottom:24px;
-    color: #6b7b8a;
+    color: #cacaca;
 }
 .quote{
     font-size:15px;
@@ -230,7 +230,7 @@
     line-height: 1.4;
 /*    letter-spacing: 1px;*/
 /*    color: #344854;*/
-    color:white;
+    color: #cacaca;
 /*    border: 2px solid #6b7b8a ;*/
     padding:16px;
     border-radius: 2px;
@@ -266,7 +266,7 @@
 }
 .desc{
     /*color: #344854;*/
-    color:white;
+    color: #cacaca;
     font-size: 17px;
     line-height: 27px;
     font-weight: 400;
@@ -314,8 +314,8 @@
     -webkit-flex: 1;
     -ms-flex: 1;
     flex: 1;
-    background-color: #6b7b8a;
-    opacity: 0.2;
+    background-color: white;
+    opacity: 0.3;
 }
 
 
@@ -406,14 +406,14 @@
 }
 .paragraph{
   /*  color:#344854;*/
-    color:white;
+    color: #cacaca;
     font-family: 'Lato', sans-serif;
     font-size:16px;
     width:100%;
     position:relative;
     line-height:1.5;
     text-align: left;
-    font-size: 18px;
+    font-size: 18px;color: #cacaca;
     line-height: 24px;
     font-weight: 400;
     letter-spacing: .5px;
@@ -561,7 +561,7 @@ ol li:before {
     line-height:1.5;
 
     /*color: #344854;*/
-    color:white;
+    color: #cacaca;
     font-weight: bold;
     justify-content: center;
     align-items: center;
