--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -94,7 +94,7 @@
 }
 .paragraph{
   /*  color:#344854;*/
-    color:white;
+    color: #cacaca;
 /*    font-family: 'Lato', sans-serif;*/
     font-family: sans-serif;
 /*    text-align: center;*/
