--- a/src/components/sidebar.module.css
+++ b/src/components/sidebar.module.css
@@ -4,19 +4,18 @@ a{
       opacity: 1;
 }
 
-.shift{
+/*.shift{
     position:absolute;
     width:100%;
     text-align: right;
     right:7%;
-      opacity: 1;
-      color:white;
+    opacity: 1;
+    color:white;
+}*/
 
-}
 .work {
 /*    font-family: 'Lato', sans-serif;*/
-      font-family: brandon-grotesque, sans-serif;
-
+    font-family: brandon-grotesque, sans-serif;
     font-size:12pt;
     font-weight: 700;
     position: sticky;
@@ -25,33 +24,36 @@ a{
     letter-spacing: 2px;
     text-align: center;
     color:white;
-      opacity: 1;
-
-
+    opacity: 1;
 
 }
 .grid{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr ;
     grid-column-gap: 48px;
-    width:100%;
+    width:auto;
     margin:auto;
     color:white;
+    position:relative; 
 
-    align-self: center;
-    justify-content: center;
+/*    align-self: center;
+    justify-content: center;*/
 }
 
 .gridWrapper{
     display: grid;
     grid-column-gap: 48px;
     grid-template-columns: 1fr 1fr;
-    padding-left:24px;
-    padding-right:24px;
-    width: 30%;
+/*    padding-left:24px;
+    padding-right:24px;*/
+/*    width: 30%;*/
     float:right;
-    margin-right:12%;
+
+        margin-left:auto;
+        margin-right:auto;
+        width:755px;
     color:white;
+    
 }
 
 .optionalWork{
